--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".E3_Input"></activity>
         <activity android:name=".F4_Input"></activity>
-        <activity android:name=".g4_input"></activity>
+        <activity android:name=".G4_Input"></activity>
+        <activity android:name=".H6_Input"></activity>
     </application>
 
 </manifest>
