--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
         <activity android:name=".F4_Input"></activity>
         <activity android:name=".G4_Input"></activity>
         <activity android:name=".H6_Input"></activity>
+        <activity android:name=".F5_Enlarge"></activity>
     </application>
 
 </manifest>
