--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
             android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".E3_Input"></activity>
         <activity android:name=".F4_Input"></activity>
+        <activity android:name=".F6_TsuinRirekiDetail"></activity>
         <activity android:name=".G4_Input"></activity>
         <activity android:name=".H6_Input"></activity>
         <activity android:name=".F5_Enlarge"></activity>
