ホームボタン押下時&プロセス削除時にランチャー起動すると画面に何も表示されない不具合対応。閉じたときの画面を復元する。

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         <activity android:name=".a7_registry_comp" />
         <activity android:name=".a9_forgotpassword" />
         <activity android:name=".B0_CancerTypeSelect" />
-        <activity android:name=".b1_2mainmenu" />
+        <activity android:name=".B1_2_GanrecoMain" />
         <activity android:name=".b3_input"></activity>
         <activity android:name=".c1_2mypage" />
         <activity android:name=".C3_UserInfo" />
