--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,12 +13,12 @@ android {
 
     compileSdkVersion 26
 
-    compileSdkVersion 27
     buildToolsVersion '28.0.2'
     defaultConfig {
         applicationId "com.frontierfield.ganreco"
         minSdkVersion 21
-        targetSdkVersion 26
+        //noinspection ExpiringTargetSdkVersion
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
         //testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -31,9 +31,6 @@ android {
             minifyEnabled true
             signingConfig signingConfigs.config
         }
-        //debug {
-        //    applicationIdSuffix ".debug"
-        //}
         debug {
             signingConfig signingConfigs.config
         }
@@ -63,22 +60,23 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.android.support:exifinterface:27.1.1'
+    implementation 'com.android.support:exifinterface:26.1.0'
     implementation 'com.android.support:support-annotations:28.0.0'
-    implementation 'com.android.support:support-v13:27.1.1'
-    implementation 'com.android.support:support-vector-drawable:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.google.firebase:firebase-core:16.0.3'
-    implementation 'com.google.firebase:firebase-auth:16.0.3'
-    implementation 'com.google.firebase:firebase-database:16.0.2'
-    implementation 'com.google.firebase:firebase-crash:16.2.0'
-    implementation 'com.google.firebase:firebase-config:16.0.0'
-    implementation 'com.google.firebase:firebase-invites:16.0.3'
-    implementation 'com.google.firebase:firebase-storage:16.0.2'
+    implementation 'com.android.support:support-v13:26.1.0'
+    implementation 'com.android.support:support-vector-drawable:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
+    implementation 'com.google.firebase:firebase-auth:16.0.4'
+    implementation 'com.google.firebase:firebase-database:16.0.3'
+    implementation 'com.google.firebase:firebase-crash:16.2.1'
+    implementation 'com.google.firebase:firebase-config:16.0.1'
+    implementation 'com.google.firebase:firebase-invites:16.0.4'
+    implementation 'com.google.firebase:firebase-storage:16.0.3'
     implementation 'com.firebaseui:firebase-ui-storage:0.6.0'
-    implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.support:support-v4:26.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
